--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,17 @@
 pandas>=2.1
-numpy>=1.23
+numpy>=2.1,<2.2
 scikit-learn>=1.3
 matplotlib>=3.8
 seaborn>=0.13
 dvc==3.50.2
-pyarrow>=15
+pyarrow>=18   # 18+ supports Python 3.13
 fastparquet>=2024.2.0
 ipykernel>=6.29
 mlflow>=2.11
 fastapi>=0.110
-uvicorn>=0.29
-evidently==0.6.7
-apache-airflow>=2.9
+uvicorn>=0.37  # remove the duplicate older uvicorn line
+evidently>=0.7
+apache-airflow>=3.1  # see Airflow note below
 xgboost>=3.0.5
-uvicorn>=0.37
 boto3>=1.40
 pytest>=7.0
